# alaeboss

./: .gitignore  README.md  alaeboss.py  compare.ipynb  get_imaging_sytematic_weights.py  pyproject.toml  test_alaeboss.py
alaeboss/: produce_imweights.py  test_alaeboss.py  test_linear_regression.py
docs/source/: alaeboss.linear_regression.rst  alaeboss.produce_imweights.rst  alaeboss.rst  alaeboss.test_linear_regression.rst  conf.py  index.rst  modules.rst
nb/: compare.ipynb
scripts/: add_imlin.py  add_imlin.sh  standalone_for_LSS.py
src/alaeboss/: __init__.py  linear_regression.py  produce_imweights.py  test_linear_regression.py
tests/: validate_add_imlin.py
