[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alaeboss"
version = "0.0.1"
description = "Linear regressions for imaging systematics, 'à la eBOSS', in JAX."
authors = [
    { name="Domitille Chebat", email="dochebat@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "iminuit",
    "matplotlib",
    "numpydoc",
    "sphinx-book-theme"
]

[project.optional-dependencies]
DESI=["healpy", "astropy"]

[tool.ruff.lint]
select = ["E"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"